2012-08-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added date facet renderer (currently not completely implemented)

2012-08-22  Ingo Renner  <ingo.renner@dkd.de>

	* Added hierarchical facets
	* Added feature #40056: Frequent searches

2012-08-21  Ingo Renner  <ingo.renner@dkd.de>

	! [TEMPLATE] Changed the relevance view helpers to take the whole result document as argument (instead of just the score)
	! [API] Moved hook modifySearchQuery to tx_solr_Search
	! [API] cleanup: Changed tx_solr_Search->getResponse() to return instance of Apache_Solr_Response as mentioned in phpDoc
	! [TEMPLATE] Changed the results per page subpart to be rendered as a regular plugin command

	* Refactoring: Extracted several search components to separate classes

	* Added class tx_solr_Typo3Environment
	* Added helper methods for file indexing
	* Removed unnecessary file path prefixes for hooks where classes can leverage the autoloader
	* Moved facetting initialization from pi_results to faceting query modifier
	* Added interface tx_solr_SearchComponent
	* Added interface tx_solr_QueryAware
	* Added interface tx_solr_SearchAware
	* Added a search component manager
	* Changed phpDoc of tx_solr_ResponseProcessor->processResponse() to indicate that it should return void
	* Added tx_solr_Search->getSolrConnection()
	* Removed option markResultTypeBoundaries, replaced by native grouping in EXT:solrgrouping
	* Added passing of whole objects/arrays in template loops
	* Added a hook to modify a query's response
	* Changed the SOLR_LINK viewhelper to use the query link builder
	* Fixed an issue where the relevance view helper tried to calculate relevance although no results were found

2012-07-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug with Index Queue initialization for mount pages
	* Fixed bug #39301: Language check in install shell script fails

2012-07-24  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed the download URL for Apache Solr 3.5 since it has been removed from Apache mirrors