@@ -1,6 +1,7 @@
 2012-08-23  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added date facet renderer (currently not completely implemented)
+	* Added feature #40054: Result document score analyzer
 
 2012-08-22  Ingo Renner  <ingo.renner@dkd.de>
 
